/*
 * $Id: ChangeLog,v 1.961 2003/04/17 21:22:06 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/


2003-04-17 23:20 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/trpccli.prg
    % Simplification of RPC system on client side. Now a remote procedure
      can be called with an array in HB_ExecFromArray() format (only
      function name as first element though), or with a standard list
      of parameters.
    % Rationalization of class and shielding of internal variables
    % Add of some sensible accessors and utility methods

  * source/rtl/trpc.prg
    % TRpcServer:Add() can accept now a TRpcFunction parameter or
      a parameter list from which a new TRpcFunction is built

  + include/hbrpc.ch
    + Added commonly used constats for more ergonomic programming
      of RPC
      
  * tests/rpcclient.prg
  * tests/rpcclientst.prg
  * tests/rpcserver.prg
    % Changed to make useable with new RPC classes syntax


2003-04-17 05:25 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makefile.nt
    * synchronise with makefile.vc
  * source/rtl/hbsrlraw.c
    * casts for msvc and for comparing singed to unsigned
  * source/vm/macro.c
    * casts for msvc

2003-04-17 00:05 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/trpc.prg
  * source/rtl/trpccli.prg
    % The RPC Syntax has been highly simplified on server side,
      Now the RPC function needs not to have been derived by
      the tRPCFunction class, but is just an executable object
      called by a HB_ExecFromArray() call. Also, while previous
      model required a special parameter decoding to be carried
      by RPC Function, in current model you can register any
      function, method or codeblock to be executed by the RPC
      server, with normal XHarbour parameter conventions.