@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.961 2003/04/17 21:22:06 jonnymind Exp $
+ * $Id: ChangeLog,v 1.962 2003/04/17 21:23:53 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -8,6 +8,10 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2003-04-09 16:00 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
+  * include/hbrddntx.h  
+  * source/rdd/dbfntx/dbfntx1.c
+    ! Borrow some fix from harbour
 
 2003-04-17 23:20 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
   * source/rtl/trpccli.prg
